<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/hint_routine_title"
        android:inputType="textCapSentences"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/etTaskDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="70dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_input_field"
        android:gravity="top|start"
        android:hint="@string/hint_description"
        android:inputType="textMultiLine"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/etTaskDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/hint_choose_date"
        android:focusable="false"
        android:clickable="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/etTaskTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_input_field"
        android:hint="@string/hint_choose_time"
        android:focusable="false"
        android:clickable="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_repeat"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/text_secondary"
        android:layout_marginBottom="4dp"/>

    <Spinner
        android:id="@+id/etTaskRepeat"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_input_field"/>

</LinearLayout>